ejercicios funciones intro finalizados

--- a/ejercicios_python_funciones_intro.ipynb
+++ b/ejercicios_python_funciones_intro.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -69,18 +69,11 @@
      "text": [
       "9\n",
       "39\n",
-      "-2\n"
+      "0\n",
+      "2\n",
+      "-2\n",
+      "6\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'6'"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -90,13 +83,13 @@
     "\n",
     "print(suma(\"34\", \"5\"))\n",
     "\n",
-    "suma(\"\", \"\")\n",
+    "print(suma(\"\", \"\"))\n",
     "\n",
-    "suma(\"2\", \"\")\n",
+    "print(suma(\"2\", \"\"))\n",
     "\n",
     "print(suma(\"-5\", \"3\"))\n",
     "\n",
-    "suma(\"\", \"6\")\n"
+    "print(suma(\"\", \"6\"))\n"
    ]
   },
   {
@@ -117,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,14 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +148,7 @@
        "[23, 64, 53, 17, 88]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,52 +174,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dicionario = {\"animal\": \"gato\", \"planta\": \"rosa\"}\n",
+    "def nuevo_string(a):\n",
+    "    a = a.lower()\n",
+    "    lista_string = list(a)\n",
+    "    keys = []\n",
+    "    values = []\n",
     "\n",
-    "print(dicionario.get(\"arvore\"))\n",
-    "\n"
+    "    for char in lista_string:\n",
+    "        if lista_string.count(char) <= 1:\n",
+    "            keys.append(char)\n",
+    "            values.append(\"(\")\n",
+    "        else: \n",
+    "            keys.append(char)\n",
+    "            values.append(\")\")\n",
+    "        \n",
+    "        resultado = \"\".join(values)\n",
+    "    \n",
+    "    return resultado"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"din\"      =>  \"(((\"\n",
+    "\"recede\"   =>  \"()()()\"\n",
+    "\"Success\"  =>  \")())())\"\n",
+    "\"(( @\"     =>  \"))((\" \n",
+    "\"Ocvl@GamFLAFkixkS\" => \"((()(()()))))(()(\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'((('"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "def conta_car(c, string):\n",
-    "    dicionario = {}\n",
-    "    for car in string:\n",
-    "        if car not in dicionario:\n",
-    "            dicionario[car] = 1\n",
-    "        else:\n",
-    "            dicionario[car] = dicionario[car] + 1 \n",
-    "    return dicionario[c]\n",
-    "        \n",
-    "print(conta_car(\"e\", \"recede\"))       \n",
-    "        \n",
-    "        \n",
-    "        "
+    "nuevo_string(\"din\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'()()()'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevo_string(\"recede\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "')())())'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevo_string(\"Success\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'))(('"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevo_string(\"(( @\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'((()(()()))))(()('"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevo_string(\"Ocvl@GamFLAFkixkS\")"
    ]
   },
   {
@@ -311,13 +384,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -336,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
