ejercicios_funciones_argumentos-avance

--- a/python/ejercicios_funciones_argumentos_funciones2.ipynb
+++ b/python/ejercicios_funciones_argumentos_funciones2.ipynb
@@ -26,84 +26,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculadora(a, b, ):\n",
+    "def calculadora(*args, operacion = \"multiplicacion\"):\n",
     "\n",
+    "    args = [*args]\n",
+    "    \n",
     "    if operacion == \"multiplicacion\":\n",
-    "       resultado = len(a)*len(b)\n",
-    "\n",
+    "       operacion = \"*\"\n",
+    "       resultado= [len(args[0])*len(args[1])]              #almacenamos el integer resultado en una lista\n",
     "    elif operacion == \"suma\":\n",
-    "        resultado = \"\".join(a + b)\n",
+    "        operacion == \"+\"\n",
+    "        resultado = [len(args[0])+len(args[1])]  \n",
     "    elif operacion == \"resta\":\n",
-    "        resultado = len(a) - len(b)\n",
-    "    else:\n",
-    "        resultado = len(a)//len(b)\n",
-    "    \n",
-    "    a = \"\".join(a)\n",
-    "    b = \"\".join(b)\n",
-    "    \n",
-    "    return print(f\"{a} * {b} => {resultado}\")"
+    "        operacion == \"-\"\n",
+    "        resultado = [len(args[0])-len(args[1])] \n",
+    "    elif operacion == \"division\":\n",
+    "        operacion == \"/\"\n",
+    "        resultado = [len(args[0])//len(args[1])]\n",
+    "        \n",
+    "    for n in resultado:\n",
+    "        n1 = n*(\".\")\n",
+    "        resultado.remove(n)\n",
+    "        resultado.append(n1)\n",
+    "        resultado = \"\".join(resultado)\n",
+    "\n",
+    "    return print(f\"{args[0]} {operacion} {args[1]} => {resultado}\")\n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1392898643.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_432/1392898643.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    calculadora(\"....\" , \".....\", +)\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".... division .. => ..\n"
      ]
     }
    ],
    "source": [
-    "calculadora(\"....\" , \".....\", +)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calcular_puntos(operacion):\n",
-    "    # Dividir la cadena de entrada en tres partes: el primer número de puntos, el operador y el segundo número de puntos.\n",
-    "    puntos_1, operador, puntos_2 = operacion.split()\n",
-    "\n",
-    "    # Contar el número de puntos en cada lado de la operación.\n",
-    "    num_puntos_1 = len(puntos_1)\n",
-    "    num_puntos_2 = len(puntos_2)\n",
-    "\n",
-    "    # Convertir los números de puntos en enteros.\n",
-    "    num1 = int('1' * num_puntos_1)\n",
-    "    num2 = int('1' * num_puntos_2)\n",
-    "\n",
-    "    # Calcular el resultado de la operación.\n",
-    "    if operador == '+':\n",
-    "        resultado = num1 + num2\n",
-    "    elif operador == '-':\n",
-    "        resultado = num1 - num2\n",
-    "    elif operador == '*':\n",
-    "        resultado = num1 * num2\n",
-    "    elif operador == '/':\n",
-    "        resultado = num1 // num2\n",
-    "    else:\n",
-    "        return ''\n",
-    "\n",
-    "    # Convertir el resultado en una cadena de puntos.\n",
-    "    if resultado == 0:\n",
-    "        return ''\n",
-    "    elif resultado < 0:\n",
-    "        return '-' + calcular_puntos('-{} {} {}'.format(num_puntos_1, operador, num_puntos_2))\n",
-    "    else:\n",
-    "        return '.' * resultado\n",
-    "\n"
+    "calculadora(\"....\", \"..\", operacion = \"division\")"
    ]
   },
   {
@@ -132,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,20 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2013"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nos_veremos(2001)"
    ]
@@ -172,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. enéis que crear un función que chequee la vida de un evaporador que contiene un gas.\n",
+    "3. Tenéis que crear un función que chequee la vida de un evaporador que contiene un gas.\n",
     "Conocemos el contenido del evaporador (contenido en ml), el porcentaje de gas que se pierde cada día y el umbral en porcentaje a partir del cual el evaporador deja de ser útil. Todos los números serán estrictamente positivos.\n",
     "⚠️ Nota: el contenido no es, de hecho, necesario en el cuerpo de la función, podéis utilizarlo o no.\n",
     "\n",
@@ -209,37 +166,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def primo(num):\n",
+    "def es_primo(num):\n",
+    "    \"\"\"Esta función permite saber si un número es primo\n",
     "\n",
-    "    if num % 2 != 0:\n",
-    "        return (\"True\")\n",
+    "    Args:\n",
+    "        num (int): cualquier numero natural\n",
+    "\n",
+    "    Returns:\n",
+    "        _bool_: indica True si el número es primo o False si no lo es\n",
+    "    \"\"\"\n",
+    "    if num < 1:\n",
+    "        return False\n",
+    "    elif num == 2:\n",
+    "        return True\n",
     "    else:\n",
-    "        return(\"False\")\n",
+    "        for i in range(2, num):\n",
+    "            if num % i == 0:\n",
+    "                return False\n",
+    "        return True\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'True'"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "primo(27)"
+    "es_primo(5099)"
    ]
   },
   {
@@ -261,6 +219,13 @@
     "\n",
     "Nota: Para 4 o más nombres, el número en \"y otros 2\" simplemente aumenta."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
