--- a/python/ejercicios_funciones_argumentos_funciones2.ipynb
+++ b/python/ejercicios_funciones_argumentos_funciones2.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +38,13 @@
     "       operacion = \"*\"\n",
     "       resultado= [len(args[0])*len(args[1])]              #almacenamos el integer resultado en una lista\n",
     "    elif operacion == \"suma\":\n",
-    "        operacion == \"+\"\n",
+    "        operacion = \"+\"\n",
     "        resultado = [len(args[0])+len(args[1])]  \n",
     "    elif operacion == \"resta\":\n",
-    "        operacion == \"-\"\n",
+    "        operacion = \"-\"\n",
     "        resultado = [len(args[0])-len(args[1])] \n",
     "    elif operacion == \"division\":\n",
-    "        operacion == \"/\"\n",
+    "        operacion = \"/\"\n",
     "        resultado = [len(args[0])//len(args[1])]\n",
     "        \n",
     "    for n in resultado:\n",
@@ -59,6 +59,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "..... / .. => ..\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculadora(\".....\", \"..\", operacion = \"division\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -66,12 +83,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".... division .. => ..\n"
+      ".... * .. => ........\n"
      ]
     }
    ],
    "source": [
-    "calculadora(\"....\", \"..\", operacion = \"division\")"
+    "calculadora(\"....\", \"..\", operacion = \"multiplicacion\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. - .. => \n"
+     ]
+    }
+   ],
+   "source": [
+    "calculadora(\"..\", \"..\", operacion = \"resta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".... + .. => ......\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculadora(\"....\", \"..\", operacion = \"suma\")"
    ]
   },
   {
@@ -119,7 +170,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2013"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nos_veremos(2001)"
    ]
@@ -142,10 +204,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def evaporador (contenido_evap, perdida_gas, umbral):\n",
+    "    \n",
+    "    while contenido_evap > umbral:\n",
+    "        contenido_evap -=(contenido_evap * perdida_gas/100)\n",
+    "        dias = +- 1\n",
+    "        \n",
+    "        return\n",
+    "        \n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -195,7 +269,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "es_primo(5099)"
    ]
@@ -222,15 +307,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista_nombres = [\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"]\n",
+    "\n",
+    "\"\"\"Esta función nos permite tomar una lista que contiene \n",
+    "     los nombres de las personas a las que les gusta un artículo en Facebook (likes)\n",
+    "     \n",
+    "    Parametro:\n",
+    "        (lista_personas): una lista con x strings como ementos \n",
+    "\n",
+    "    \"\"\"  \n",
+    "    \n",
+    "def contar_likes(lista_personas): \n",
+    "    \n",
+    "    if len(lista_personas) == 0:\n",
+    "        print(\"A nadie le gusta esto\")\n",
+    "\n",
+    "    elif len(lista_personas) == 1:\n",
+    "        print(f\"A {lista_personas[0]} le gusta esto\")\n",
+    "\n",
+    "    elif len(lista_personas) == 2:\n",
+    "        print(f\"A {lista_personas[0]} y {lista_personas[1]} les gusta esto\")\n",
+    "\n",
+    "    elif len(lista_personas) == 3:\n",
+    "        print(f\"A {lista_personas[0]} , {lista_personas[1]} y {lista_personas[2]} les gusta esto\")\n",
+    "\n",
+    "    elif len(lista_personas) > 3:\n",
+    "        print(f\"A {lista_personas[0]} , {lista_personas[1]} y {len(lista_personas[2:])} les gusta esto\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Alex , Jacoba y 3 les gusta esto\n"
+     ]
+    }
+   ],
+   "source": [
+    "contar_likes(lista_nombres)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -244,9 +373,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0 (v3.11.0:deaf509e8f, Oct 24 2022, 14:43:23) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
