--- a/python/ejercicios_funciones_argumentos_funciones2.ipynb
+++ b/python/ejercicios_funciones_argumentos_funciones2.ipynb
@@ -26,17 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculadora(*args, operacion = \"multiplicacion\"):\n",
-    "\n",
+    "    \"\"\" Esta función es una calculadora de cadenas de caracteres. Toma como argumentos dos cadenas de caracteres y una operación. \n",
+    "    Retorna una cadena de caracteres con las operaciones realizadas\"\"\"\n",
+    "        \n",
     "    args = [*args]\n",
     "    \n",
     "    if operacion == \"multiplicacion\":\n",
     "       operacion = \"*\"\n",
-    "       resultado= [len(args[0])*len(args[1])]              #almacenamos el integer resultado en una lista\n",
+    "       resultado= [len(args[0])*len(args[1])]             \n",
     "    elif operacion == \"suma\":\n",
     "        operacion = \"+\"\n",
     "        resultado = [len(args[0])+len(args[1])]  \n",
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -151,13 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# corregido en tutoría\n",
-    "\n",
     "def nos_veremos(year): \n",
+    "\n",
+    "    \"\"\"Esta función te da el próximo año de felicitación a un amigo bajo la premisa de que ese año no puede tener dígitos repetidos.\n",
+    "       Arg: toma como argumento un año\n",
+    "       Returns: un año, el primero que cumpla la condición estipulada de no tener dígitos repetidos\n",
+    "    \"\"\"\n",
     "\n",
     "    happy_birthday = year + 1\n",
     "    \n",
@@ -168,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +182,7 @@
        "2013"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,21 +209,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def evaporador (contenido_evap, perdida_gas, umbral):\n",
+    "def evaporador(contenido, evaporacion, umbral):\n",
+    "    \"\"\"Esta función permite saber cuanto va a durar un evaporador, considerando su contenido, el porcentaje de gas que pierde y el umbral a partir del que deja de funcionar\n",
     "    \n",
-    "    while contenido_evap > umbral:\n",
-    "        contenido_evap -=(contenido_evap * perdida_gas/100)\n",
-    "        dias = +- 1\n",
-    "        \n",
-    "        return\n",
+    "        Args: contenido del evaporador en ml y evaporación por día y umbral de funcionamiento en porcentaje. La función toma los argumentos como números enteros y convierte los porcentajes\n",
+    "\n",
+    "        Returns: el número de dias que va a durar el evaporador\n",
+    "    \"\"\"\n",
+    "\n",
+    "    cont_evap = contenido\n",
+    "    evap_por_dia = evaporacion\n",
+    "    umbral_funcionamiento = umbral\n",
+    "\n",
+    "    umbral_funcionamiento = cont_evap * umbral_funcionamiento / 100\n",
+    "    dias = 0\n",
+    "\n",
+    "    while cont_evap >= umbral_funcionamiento:\n",
+    "        cont_evap -= cont_evap * evap_por_dia / 100\n",
+    "        dias += 1\n",
+    "    return dias\n",
+    "\n",
     "        \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaporador(10, 10, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaporador(10,10,10)"
    ]
   },
   {
@@ -313,15 +370,17 @@
    "source": [
     "lista_nombres = [\"Alex\", \"Jacoba\", \"Lola\", \"Carmen\", \"Mariana\"]\n",
     "\n",
-    "\"\"\"Esta función nos permite tomar una lista que contiene \n",
-    "     los nombres de las personas a las que les gusta un artículo en Facebook (likes)\n",
+    "\n",
+    "def contar_likes(lista_personas): \n",
+    "\n",
+    "    \"\"\"\n",
+    "    Esta función nos permite tomar una lista que contiene los nombres de las personas a las que les gusta un artículo en Facebook (likes)\n",
     "     \n",
     "    Parametro:\n",
-    "        (lista_personas): una lista con x strings como ementos \n",
-    "\n",
-    "    \"\"\"  \n",
+    "        (lista_personas): una lista con x strings como elementos \n",
     "    \n",
-    "def contar_likes(lista_personas): \n",
+    "    Returns: indica a cuantas personas de la lista les gusta el contenido o que a nadie le gusta\n",
+    "    \"\"\"  \n",
     "    \n",
     "    if len(lista_personas) == 0:\n",
     "        print(\"A nadie le gusta esto\")\n",
@@ -373,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0 (v3.11.0:deaf509e8f, Oct 24 2022, 14:43:23) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
